# Benchmark-XAI

./: README.md  pyproject.toml  setup_env.ps1
data/: README.md
data_generation/: __init__.py  bdd_synthetique.py  simulate_data.py
evaluation/: Robustesse_LIME.py  Robustesse_PFI.py  Robustesse_SHAP.py
evaluation/Fidelite/: data.py
evaluation/Fidelite/ML_models/: mlp.py  mlp_metrics_summary.csv  polyreg_metrics_deg3.csv  reg_poly.py  rf.py  rf_metrics_summary.csv  svm_pipelines_metrics.csv  svr.py
evaluation/Fidelite/XAI/: xai_mlp.py  xai_reg_poly.py  xai_rf.py  xai_svr.py
interpretability/: Explainability_Analysis.py  Sensitivity.py  Sobol_index.py  __init__.py
interpretability/Analysis_new_bdd/MLP/N_sim/LIME/: LIME_N_sim_bg100_test10_weights.csv
interpretability/Analysis_new_bdd/MLP/S_sim/LIME/: LIME_S_sim_bg100_test10_weights.csv
interpretability/Analysis_new_bdd/Poly/N_sim/LIME/: LIME_N_sim_bg100_test10_weights.csv
interpretability/Analysis_new_bdd/Poly/S_sim/LIME/: LIME_S_sim_bg100_test10_weights.csv
interpretability/Analysis_new_bdd/RF/N_sim/LIME/: LIME_N_sim_bg100_test10_weights.csv
interpretability/Analysis_new_bdd/RF/S_sim/LIME/: LIME_S_sim_bg100_test10_weights.csv
interpretability/new_bdd_XAI/: MLP_BDD_New_EXP.py  REG_Poly_BDD_New_EXP.py  RF_BDD_New_EXP.py  SVR_BDD_New_EXP.py
models/: __init__.py  train_models.py
models/new_bdd/: mlp_bdd_new.py  reg_poly_new_bdd.py  rf_bdd_new.py  svr_new_bdd.py
models/old_bdd/plots/: summary_metrics.csv
src/benchmark/: config.py  io.py  physics.py
src/benchmark/data/: datasets.py
(+10 files in other folders)
