[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = "Benchmark ML project"
authors = ["HAMMAMI Mohtadi"]
readme = "README.md"

# déclaration  package
packages = [{ include = "benchmark", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
shap = "^0.48.0"
lime = "^0.2.0.1"
joblib = "^1.4.2"
openpyxl = "^3.1.2"
SALib = "^1.4.7"

[tool.poetry.scripts]
train-model = "benchmark.training:main"
